adicionando o resto das paginas

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <nav class="nav-bar container">
             <img src="./images/ifit_high_resolution_logo_transparent_1.png" alt="IFit Logo" class="logo">
             <div class="nav-links">
-                <a role="button" class="top-bar-button">Início</a>
-                <a role="button" class="top-bar-button">Sobre</a>
-                <a role="button" class="top-bar-button">Planos</a>
-                <a role="button" class="top-bar-button">Unidades</a>
-                <a role="button" class="top-bar-button">Contato</a>
-                <a role="button" class="top-bar-button">Login</a>
+                <a href="index.html" role="button" class="top-bar-button">Início</a>
+                <a href="#" role="button" class="top-bar-button">Sobre</a>
+                <a href="planos.html" role="button" class="top-bar-button">Planos</a>
+                <a href="#" role="button" class="top-bar-button">Unidades</a>
+                <a href="contato.html" role="button" class="top-bar-button">Contato</a>
+                <a href="#" role="button" class="top-bar-button">Login</a>
             </div>
         </nav>
     </header>
@@ -142,5 +142,16 @@
             <p>© 2024 IFit. Todos Direitos Reservados.</p>
         </div>
     </footer>
+
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+          <div class="vw-plugin-top-wrapper"></div>
+        </div>
+      </div>
+      <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+      <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+      </script>
 </body>
 </html>
