--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IFit - Academia</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header id="navbar" class="top-bar font-archivo">
@@ -20,7 +20,7 @@
                 <a href="planos.html" role="button" class="top-bar-button">Planos</a>
                 <a href="#" role="button" class="top-bar-button">Unidades</a>
                 <a href="contato.html" role="button" class="top-bar-button">Contato</a>
-                <a href="#" role="button" class="top-bar-button">Login</a>
+                <a href="login.html" role="button" class="top-bar-button">Login</a>
             </div>
         </nav>
     </header>
@@ -143,6 +143,17 @@
         </div>
     </footer>
 
+    <div class="zoom-widget">
+        <button class="zoom-toggle">
+            🔍
+        </button>
+        <div class="zoom-options">
+            <button class="zoom-in">+</button>
+            <button class="zoom-out">−</button>
+        </div>
+    </div>
+    
+
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
         <div vw-plugin-wrapper>
@@ -153,5 +164,6 @@
       <script>
         new window.VLibras.Widget('https://vlibras.gov.br/app');
       </script>
+      
 </body>
 </html>
