--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="container">
                     <h1 class="welcome-head">Seja bem-vindo à <span id="welcome-ifit">IFit</span>!</h1>
                     <p id="welcome-sub">Conte conosco em sua busca pela vida saudável</p>
-                    <a href="#planos" class="button">Conheça nossos planos</a>
+                    <a href="planos.html" class="button">Conheça nossos planos</a>
                 </div>
             </section>
 
@@ -41,7 +41,7 @@
                         <div class="planos-desc">
                             <h2 class="planos-head">Nossos planos!</h2>
                             <p class="planos-subtitulo">Você pode escolher o plano que melhor se encaixa na sua rotina</p>
-                            <a href="#contato" class="button">Ou entre em contato se preferir</a>
+                            <a href="./contato.html" class="button">Ou entre em contato se preferir</a>
                         </div>
                         <div class="planos-logo-container">
                             <img src="./images/ifit_high_resolution_logo_transparent_1.png" alt="IFit Logo" id="planos-logo">
