--- a/contato.html
+++ b/contato.html
@@ -47,6 +47,17 @@
             </div>
         </section>
     </main>
+
+    <div class="zoom-widget">
+        <button class="zoom-toggle">
+            🔍
+        </button>
+        <div class="zoom-options">
+            <button class="zoom-in">+</button>
+            <button class="zoom-out">−</button>
+        </div>
+    </div>
+    
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
         <div vw-plugin-wrapper>
