--- a/planos.html
+++ b/planos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/planos.css">
 </head>
-<body>
+<body class="main-content">
     <header id="navbar" class="top-bar font-archivo">
         <nav class="nav-bar container">
             <img src="./images/ifit_high_resolution_logo_transparent_1.png" alt="IFit Logo" class="logo">
@@ -96,6 +96,16 @@
             </div>
         </section>
     </main>
+
+    <div class="zoom-widget">
+        <button class="zoom-toggle">
+            🔍
+        </button>
+        <div class="zoom-options">
+            <button class="zoom-in">+</button>
+            <button class="zoom-out">−</button>
+        </div>
+    </div>
     
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
@@ -112,4 +122,5 @@
         <p>© 2024 IFit. Todos direitos reservados.</p>
     </footer>
 </body>
+<script src="./script.js"></script>
 </html>
