--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
             </nav>
         </header>
 
+        <button id="menu-button" class="menu-button">☰</button>
+
+        <!-- Sidebar -->
+        <div id="sidebar" class="sidebar font-archivo">
+            <a href="index.html">Início</a>
+            <a href="#">Sobre</a>
+            <a href="planos.html">Planos</a>
+            <a href="#">Unidades</a>
+            <a href="contato.html">Contato</a>
+            <a href="login.html">Login</a>
+        </div>
+
         <main>
             <section id="inicio" class="welcome font-archivo">
                 <div class="container">
