--- a/contato.html
+++ b/contato.html
@@ -24,6 +24,18 @@
         </nav>
     </header>
 
+    <button id="menu-button" class="menu-button">☰</button>
+
+    <!-- Sidebar -->
+    <div id="sidebar" class="sidebar font-archivo">
+        <a href="index.html">Início</a>
+        <a href="#">Sobre</a>
+        <a href="planos.html">Planos</a>
+        <a href="#">Unidades</a>
+        <a href="contato.html">Contato</a>
+        <a href="login.html">Login</a>
+    </div>
+
     <main class="main-contact">
         <section class="hero">
             <div class="container">
@@ -72,5 +84,6 @@
     <footer>
         <p>Copyright © 2024 IFit. Todos Direitos Reservados.</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
