--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img src="./images/ifit_high_resolution_logo_transparent_1.png" alt="IFit Logo" class="logo">
                 <div class="nav-links">
                     <a href="index.html" role="button" class="top-bar-button">Início</a>
-                    <a href="#" role="button" class="top-bar-button">Sobre</a>
+                    <a href="sobre.html" role="button" class="top-bar-button">Sobre</a>
                     <a href="planos.html" role="button" class="top-bar-button">Planos</a>
                     <a href="#" role="button" class="top-bar-button">Unidades</a>
                     <a href="contato.html" role="button" class="top-bar-button">Contato</a>
@@ -31,7 +31,7 @@
         <!-- Sidebar -->
         <div id="sidebar" class="sidebar font-archivo">
             <a href="index.html">Início</a>
-            <a href="#">Sobre</a>
+            <a href="sobre.html">Sobre</a>
             <a href="planos.html">Planos</a>
             <a href="#">Unidades</a>
             <a href="contato.html">Contato</a>
@@ -48,6 +48,7 @@
             </section>
 
             <section id="planos" class="planos-section font-archivo">
+                <img src="./images/planos-fundo.png" alt="Plano de fundo" class="background-image">
                 <div class="container">
                     <div class="planos-content">
                         <div class="planos-desc">
