--- a/planos.html
+++ b/planos.html
@@ -14,7 +14,7 @@
             <img src="./images/ifit_high_resolution_logo_transparent_1.png" alt="IFit Logo" class="logo">
             <div class="nav-links">
                 <a href="index.html" role="button" class="top-bar-button">Início</a>
-                <a href="#" role="button" class="top-bar-button">Sobre</a>
+                <a href="sobre.html" role="button" class="top-bar-button">Sobre</a>
                 <a href="planos.html" role="button" class="top-bar-button">Planos</a>
                 <a href="#" role="button" class="top-bar-button">Unidades</a>
                 <a href="contato.html" role="button" class="top-bar-button">Contato</a>
@@ -28,7 +28,7 @@
     <!-- Sidebar -->
     <div id="sidebar" class="sidebar font-archivo">
         <a href="index.html">Início</a>
-        <a href="#">Sobre</a>
+        <a href="sobre.html">Sobre</a>
         <a href="planos.html">Planos</a>
         <a href="#">Unidades</a>
         <a href="contato.html">Contato</a>
@@ -45,7 +45,7 @@
                         <p>Aproveite todos os benefícios disponíveis!</p>
                     </div>
                 </div>
-                <button class="btn">Contrate agora</button>
+                <a href="login.html" class="btn">Contrate agora</a>
             </div>
         </section>
 
@@ -81,7 +81,7 @@
                         <p>Tenha acesso à nossas unidades</p>
                     </div>
                 </div>
-                <button class="btn">Contrate agora</button>
+                <a href="login.html" class="btn">Contrate agora</a>
             </div>
         </section>
 
