--- a/contato.html
+++ b/contato.html
@@ -15,7 +15,7 @@
             <img src="./images/ifit_high_resolution_logo_transparent_1.png" alt="IFit Logo" class="logo">
             <div class="nav-links">
                 <a href="index.html" role="button" class="top-bar-button">Início</a>
-                <a href="#" role="button" class="top-bar-button">Sobre</a>
+                <a href="sobre.html" role="button" class="top-bar-button">Sobre</a>
                 <a href="planos.html" role="button" class="top-bar-button">Planos</a>
                 <a href="#" role="button" class="top-bar-button">Unidades</a>
                 <a href="contato.html" role="button" class="top-bar-button">Contato</a>
@@ -29,7 +29,7 @@
     <!-- Sidebar -->
     <div id="sidebar" class="sidebar font-archivo">
         <a href="index.html">Início</a>
-        <a href="#">Sobre</a>
+        <a href="sobre.html">Sobre</a>
         <a href="planos.html">Planos</a>
         <a href="#">Unidades</a>
         <a href="contato.html">Contato</a>
