--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
             <img src="./images/ifit_high_resolution_logo_transparent_1.png" alt="IFit Logo" class="logo">
             <div class="nav-links">
                 <a href="index.html" role="button" class="top-bar-button">Início</a>
-                <a href="#" role="button" class="top-bar-button">Sobre</a>
+                <a href="sobre.html" role="button" class="top-bar-button">Sobre</a>
                 <a href="planos.html" role="button" class="top-bar-button">Planos</a>
                 <a href="#" role="button" class="top-bar-button">Unidades</a>
                 <a href="contato.html" role="button" class="top-bar-button">Contato</a>
@@ -28,36 +28,38 @@
     <!-- Sidebar -->
     <div id="sidebar" class="sidebar font-archivo">
         <a href="index.html">Início</a>
-        <a href="#">Sobre</a>
+        <a href="sobre.html">Sobre</a>
         <a href="planos.html">Planos</a>
         <a href="#">Unidades</a>
         <a href="contato.html">Contato</a>
         <a href="login.html">Login</a>
     </div>
 
-    <section id="login" class="login font-roboto background">
-        <div class="container">
-            <h2>Login</h2>
-            <form action="login.php" method="post">
-                <input type="text" name="username" placeholder="Nome" required>
-                <input type="password" name="password" placeholder="Senha" required>
-                <button type="submit" class="logbutton">Entrar</button>
-            </form>
-            <p>Não tem uma conta? <a href="#register" class="logbutton">Cadastre-se</a></p>
-        </div>
-    </section>
-    
-    <section id="register" class="register font-roboto">
-        <div class="container">
-            <h2>Cadastro</h2>
-            <form action="register.php" method="post">
-                <input type="text" name="username" placeholder="Nome" required>
-                <input type="email" name="email" placeholder="Seu email" required>
-                <input type="password" name="password" placeholder="Senha" required>
-                <button type="submit" class="logbutton">Cadastrar</button>
-            </form>
-        </div>
-    </section>
+    <main>
+        <section id="login" class="login font-roboto background">
+            <div class="container">
+                <h2>Login</h2>
+                <form action="login.php" method="post">
+                    <input type="text" name="username" placeholder="Nome" required>
+                    <input type="password" name="password" placeholder="Senha" required>
+                    <button type="submit" class="logbutton">Entrar</button>
+                </form>
+                <p>Não tem uma conta? <a href="#register" id="new-account" class="logbutton">Cadastre-se</a></p>
+            </div>
+        </section>
+        
+        <section id="register" class="register font-roboto">
+            <div class="container">
+                <h2>Cadastro</h2>
+                <form action="register.php" method="post">
+                    <input type="text" name="username" placeholder="Nome" required>
+                    <input type="email" name="email" placeholder="Seu email" required>
+                    <input type="password" name="password" placeholder="Senha" required>
+                    <button type="submit" class="logbutton">Cadastrar</button>
+                </form>
+            </div>
+        </section>
+    </main>
 
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
