--- a/sobre.html
+++ b/sobre.html
@@ -55,7 +55,7 @@
             <div class="container">
                 <h2>Fundadores</h2>
                 <div class="fundador-container">
-                    <img src="./images/pedro.png" alt="Fundador 1" class="fundador-img">
+                    <img src="./images/pedro.jpg" alt="Fundador 1" class="fundador-img">
                     <div class="fundador-info">
                         <h3>Pedro Santos Cabral</h3>
                         <p>Com uma carreira sólida na área de educação física, Pedro Cabral trouxe sua paixão por esportes e bem-estar para fundar a IFit. Sua visão é transformar vidas através da prática de atividades físicas.</p>
